src/objects/Assignment_Queue_Member__c.object
<CustomObject>
    <fields>
        <fullName>Assignment_Queue__c</fullName>
        <label>Assignment Queue</label>
        <referenceTo>Assignment_Queue__c</referenceTo>
        <relationshipLabel>Assignment Queue Members</relationshipLabel>
        <relationshipName>Assignment_Queue_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Assignment__c</fullName>
        <label>Last Assignment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Member_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Status__c</fullName>
        <formula>IF(User_Active__c &amp;&amp; Member_Active__c,&apos;Valid&apos;,&apos;Invalid&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Millisecond__c</fullName>
        <label>Millisecond</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Active__c</fullName>
        <formula>IF(User__r.IsActive,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assignment_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Assignment Queue Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>User_Name__c</columns>
        <columns>Last_Assignment__c</columns>
        <columns>Millisecond__c</columns>
        <columns>Member_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Member-{0000}</displayFormat>
        <label>Assignment Queue Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Queue Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>